   HBASE-3492  NPE while splitting table with empty column family store
   HBASE-3495  Shell is failing on subsequent split calls
   HBASE-3400  Coprocessor Support for Generic Interfaces
               (Ed Kohlwey via Gary Helmling)
   HBASE-3502  Can't open region because can't open .regioninfo because
               AlreadyBeingCreatedException


  IMPROVEMENTS
   HBASE-2001  Coprocessors: Colocate user code with regions (Mingjie Lai via
               Andrew Purtell)
   HBASE-3290  Max Compaction Size (Nicolas Spiegelberg via Stack)  
   HBASE-3292  Expose block cache hit/miss/evict counts into region server
               metrics
   HBASE-2936  Differentiate between daemon & restart sleep periods
   HBASE-3316  Add support for Java Serialization to HbaseObjectWritable
               (Ed Kohlwey via Stack)
   HBASE-1861  Multi-Family support for bulk upload tools
   HBASE-3308  SplitTransaction.splitStoreFiles slows splits a lot
   HBASE-3328  Added Admin API to specify explicit split points
   HBASE-3345  Coprocessors: Allow observers to completely override base
               function
   HBASE-3260  Coprocessors: Add explicit lifecycle management
   HBASE-3377  Upgrade Jetty to 6.1.26
   HBASE-3387  Pair does not deep check arrays for equality
               (Jesse Yates via Stack)
   HBASE-3393  Update Avro gateway to use Avro 1.4.1 and the new
               server.join() method (Jeff Hammerbacher via Stack)
   HBASE-3437  Support Explict Split Points from the Shell
   HBASE-3433  KeyValue API to explicitly distinguish between deep & shallow
               copies
   HBASE-3305  Allow round-robin distribution for table created with
               multiple regions (ted yu via jgray)


  NEW FEATURES
   HBASE-3287  Add option to cache blocks on hfile write and evict blocks on
               hfile close
   HBASE-3335  Add BitComparator for filtering (Nathaniel Cook via Stack)
   HBASE-3256  Coprocessors: Coprocessor host and observer for HMaster