@@ -44,6 +44,7 @@ Release 0.91.0 - Unreleased
                (Ed Kohlwey via Gary Helmling)
    HBASE-3502  Can't open region because can't open .regioninfo because
                AlreadyBeingCreatedException
+   HBASE-3501  Remove the deletion limit in LogCleaner
 
 
   IMPROVEMENTS
